2001-05-01  Eric Blake  <ebb9@email.byu.edu>

	* src/Makefile.am (jikespg):
	* src/Makefile.in (jikespg):
	Use $(JIKESPG) instead of hardcoded jikespg.

2001-05-01  Mo DeJong  <mdejong@redhat.com>

	* src/ast.h (DYNAMIC_CAST):
	* src/lookup.cpp: Add new DYNAMIC_CAST method, it
	will make use of the dynamic_cast<> operator
	and RTTI to check for downcast errors. Use it
	for all Ast and Symbol cast conversions.

2001-05-01  Eric Blake  <ebb9@email.byu.edu>

	* expr.cpp: use control.IsSimpleIntegerValueType(x)
	instead of x == control.int_type.

2001-05-01  Eric Blake  <ebb9@email.byu.edu>

	* expr.cpp: A string expression was not
	being treated as a constant, thus breaking
	some instanceof tests.

2001-04-26  Mo DeJong  <mdejong@redhat.com>

	* src/stream.cpp (DecodeNextCharacter): Use
	u2 type instead of wchar_t type to address
	a 16 bit value from a char*.

2001-04-23  Adam Hawthorne  <adamh@basis.com>

	* doc/jikes.1: Added options and changed text
	at the bottom to reflect those options.
	* src/control.cpp (Control):
	* src/control.h (Control):
	Add support for distinguishing
	directories specified with -sourcepath option.
	Add bad_dirnames for better error reporting
	because of the way the new options work. Add
	new methods ProcessBootClassPath(),
	ProcessExtDirs(), ProcessClassPath(), and
	ProcessSourcePath().
	* src/jikes.cpp (main): Added new options
	to usage message.
	* src/jikesapi.cpp (JikesOption):
	* src/jikesapi.h (JikesOption):
	Add new member variables bootclasspath,
	extdirs, and sourcepath.
	* src/option.cpp (Option): Add parsing of
	new options
	* src/symbol.cpp (DirectorySymbol, SymbolTable):
	* src/symbol.h (DirectorySymbol):
	Add source_dir_only flag in DirectorySymbol.
	Add new source_dir_only_ parameter to
	DirectorySymbol constructor, and check it
	in ReadDirectory(). Change
	SymbolTable::InsertDirectorySymbol() and
	DirectorySymbol::InsertDirectorySymbol() to
	require the flag.
	* src/system.cpp (Control):